# helmet-agent

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  todo.md
.claude/: settings.json
docs/: api-reference.md  requirements.md  review-findings.md  use_cases.md
docs/adr/: 001-python-runtime.md  002-finna-api-as-primary-data-source.md  003-kirkanta-api-for-opening-hours.md  004-claude-tool-use-for-agent.md  005-mcp-server-as-delivery.md
src/helmet_agent/: __init__.py  __main__.py  branch_resolver.py  finna.py  kirkanta.py  server.py  tools.py
tests/: test_branch_resolver.py  test_finna.py  test_integration.py  test_kirkanta.py  test_tools.py
