[project]
name = "helmet-agent"
version = "0.1.0"
description = "MCP server for querying the Helsinki Helmet public library network"
readme = "README.md"
authors = [
    { name = "mikiwiik", email = "mikiwiik@users.noreply.github.com" }
]
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "mcp[cli]",
    "httpx",
]

[project.scripts]
helmet-agent = "helmet_agent.server:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "respx",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
